<resources>
    <string name="name">KBCV</string>
    <string name="equations">Equations</string>
    <string name="rules">Rules</string>
    <string name="functions">Functions</string>
    <string name="variables">Variables</string>
    <string name="symbols">Symbols</string>
    <string name="arity">arity</string>
    <string name="automatic_completion">Automatic completion</string>
    <string name="computing">Computing&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="undo">undo</string>
    <string name="done">done</string>
    <string name="save">save</string>
    <string name="add">add</string>
    <string name="clear">clear</string>
    <string name="add_es">Add ES</string>
    <string name="as_new">Use as new ES</string>
    <string name="add_to">Add to existing ES</string>
    <string name="new_fun">New Function</string>
    <string name="err_empty">You have to enter something</string>
    <string name="err_symbol_exists">Symbol already exists</string>
    <string name="err_nan">No valid number</string>
    <string name="new_var">New Variable</string>
    <string name="undo_dialog">Undo/Redo History</string>
    <string name="import_dialog">Import ES</string>
    <string name="import_external">Import from external file</string>
    <string name="select_filemanager">Select a File Manager</string>
    <string name="err_filemanager">Please install a File Manager</string>
    <string name="hint_name">name</string>
    <string name="save_trs">Save TRS</string>
    <string name="saved_as">Saved rules as %1$s in %2$s</string>
    <string name="error_simplify">Nothing to simplify</string>
    <string name="error_delete">Nothing to delete</string>
    <string name="error_compose">Nothing to compose</string>
    <string name="error_collapse">Nothing to collapse</string>
    <string name="error_deduce">Nothing deduced</string>
    <string name="error_auto_complete">Automatic completion not successful</string>
    <string name="error_precedence">Could not add to precedence</string>
    <string name="error_remove_precedence">Could not remove precedence</string>
    <string name="error_orient">Equation could not be oriented</string>
    <string name="error_complete">TRS is not complete yet</string>
    <string name="ok_orient"><b>orient:</b> %1$d equations oriented</string>
    <string name="ok_simplify"><b>simplify:</b> some equations simplified</string>
    <string name="ok_delete"><b>delete:</b> %1$d equations deleted</string>
    <string name="ok_compose"><b>compose:</b> some rules composed</string>
    <string name="ok_collapse"><b>collapse:</b> some rules collapsed</string>
    <string name="ok_deduced"><b>deduce:</b> %1$d new equations deduced</string>
    <string name="ok_added_es"><b>added ES:</b> %1$d new equations added</string>
    <string name="ok_new_es"><b>new ES:</b> %1$d new equations</string>
    <string name="ok_auto_complete">Automatic completion successful</string>
    <string name="ok_added_precedence">Added %1$s to precedence</string>
    <string name="removed_precedence">Removed precedence</string>
    <string name="edited_precedence">Edited precedence</string>
    <string name="added_var">Added a variable</string>
    <string name="added_fun">Added a function symbol</string>
    <string name="removed_eq">Removed equation %1$d</string>
    <string name="edited_eq">Edited equation %1$d</string>
    <string name="edited_prec">Edited Precedence</string>
    <string name="created_eq">Created new equation</string>
    <string name="complete">TRS is complete now!</string>
    <string name="clear_all">cleared all</string>
    <string name="initialize">initialize</string>
    <string name="simplify_delete">Simplified equation %1$d as far as possible</string>
    <string name="rounds">rounds in automatic completion</string>
    <string name="variable_symbols">Variable Symbols</string>
    <string name="function_symbols">Function Symbols</string>
    <string name="variable_summary">Variable names displayed in radial picker: </string>
    <string name="function_summary">Function names displayed in radial picker: </string>
    <string name="error_symbols">Radial Layout can only display 6 symbols, more will be ignored</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="section_format">Page %1$d</string>
    <string name="completion">Completion</string>
    <string name="completion_long_text">Interactively apply the inference rules of Knuth-Bendix Completion</string>
    <string name="equation_editor">Equation Editor</string>
    <string name="equation_long_text">Define and edit your own equational systems</string>
    <string name="precedences">Precedences</string>
    <string name="precedence">Precedence</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="precedences_long_text">Supply your own LPO precedence or let the app figure it out for you</string>
    <string name="eq1">
        <![CDATA[<font color=#eeeedd>f</font>(<font color=#eeeedd>f</font>(<font color=#4C804C>x</font>, <font color=#4C804C>y</font>), <font color=#4C804C>z</font>)
        → <font color=#eeeedd>f</font>(<font color=#4C804C>x</font>, <font color=#eeeedd>f</font>(<font color=#4C804C>y</font>, <font color=#4C804C>z</font>))]]>
    </string>
    <string name="eq2">
        <![CDATA[<font color=#eeeedd>f</font>(<font color=#4C804C>x</font>, <font color=#eeeedd>c</font>)
        → <font color=#4C804C>x</font>]]>
    </string>
    <string name="eq3">
        <![CDATA[<font color=#eeeedd>f</font>(<font color=#4C804C>x</font>, <font color=#eeeedd>g</font>(<font color=#4C804C>x</font>))
        → <font color=#eeeedd>c</font>]]>
    </string>
    <string name="feedback_email">christina.kohl@student.uibk.ac.at</string>
    <string name="feedback_subject">Feedback on KBCV-App</string>
    <string name="title_feedback_dialog">Send feedback</string>
    <string-array name="eq_groups">
        <item>General</item>
        <item>Save/Import</item>
        <item>Symbols</item>
        <item>Equations</item>
    </string-array>
    <string name="eq_general">
        Depending on your screen width you either see a tabbed view (&lt; 480dp) or two panels side by side (&#x2265; 480dp).
        The first tab or panel shows an edit area for variable  and function symbols. The second one
        contains an edit area for new equations and also shows a list of all current equations.
    </string>
    <string-array name="eq_save">
        <item>The import and save options are available in the overflow menu of
            the action bar (the three vertical dots at the far right end).</item>
        <item>Import: import equational systems from .trs oder .xml files. Files from the local KBCV folder are shown as a list.
        By default this list contains at least the standard group-theory example, but also all other equational systems that you ever from KBCV saved.</item>
        <item>Save: saves the current equational system to the local KBCV folder. A dialog will open where you have to enter a name for your file. </item>
    </string-array>
    <string-array name="eq_symbols">
        <item>Add: Pressing the + button opens a radial menu, where you can select the symbol you want to add. When adding
        a function symbol, you are also required to choose an arity after you selected a symbol.\nIf you want
        a symbol that is not contained in the list, use the button with the 3 dots (…) to open a dialog where you can
        enter a string that you want to use as symbol. The symbols that are shown in the radial menu by default can
            be changed in the settings.</item>
        <item>Delete: Longpress the symbol you want to delete, this makes the symbol draggable and turns the
        + button into a trash symbol. Now drag and drop the symbol onto the trash.</item>
    </string-array>
    <string-array name="eq_equations">
        <item>Creating equations:
        At the bottom of the equations view the edit area is located. The edit area holds a list of all previously defined variables and function
        symbols as draggable buttons. By dragging and dropping a symbol into the designated
        dropzone that symbol will be added to the equation. For functions with an arity greater
        than zero, the appropriate number of dropzones will be created. Symbols can also be dragged onto other symbols and thereby overwrite that part of
            the equation.\nWhen an equation is finished, i.e., containing no more dropzones, you can either
            press the ADD button or drop the equation into the list of existing equations by dragging
            it up at the ≈ sign.</item>
        <item>Editing and Deleting: You can select items in the list above the edit area and
            choose the desired action in the action bar. When choosing edit the equation will
            appear in the edit area at the bottom of the screen and you can start dragging
            different symbols onto it.
        </item>
    </string-array>
    <string-array name="completion_groups">
        <item>General</item>
        <item>Export TRS</item>
        <item>Gestures</item>
        <item>Automatic Completion</item>
        <item>Completeness Check</item>
    </string-array>
    <string name="completion_general">
        Depending on your screen width you either see a tabbed view (&lt; 480dp) or two panels side by side (&#x2265; 480dp).
        The first tab or panel shows a list of all equations of the current equational system, the second one
        shows all rules of the current rewrite system.\nIn both views any number of items (equations or rules) can be selected and one of
        the inference rules of Knuth-Bendix completion can be applied to them, by using the appropriate action
        in the contextual action bar.
    </string>
    <string-array name="export_content">
        <item>The export action is available in the overflow menu of the App Bar. The current term rewrite system
        will be exported as a TRS file to the KBCV folder in Documents.</item>
    </string-array>
    <string-array name="gesture_content">
        <item>Orient\n Rightswipe equation to orient it from left to right, leftswipe it to orient from right to left.</item>
        <item>Simplify and Delete equation\nLongpress equation until it is draggable, drag it down and release it.
        This simplifies the equation as far as possible and then deletes it, if it has become trivial.</item>
        <item>Deduce\nLongpress rule until it is draggable, drag it onto the → of another rule and release. This adds
        all critical pairs that exist between those two rules to the equational system.</item>
        <item>Simplify, Compose, Collapse\nLongpress rule until it is draggable,
            drag it onto left- or right-hand side of another equation or rule.
            That term will be reduced with the rule, resulting in a Simplify, Compose, or Collapse action.</item>
    </string-array>
    <string-array name="automatic_comp_content">
        <item>Select automatic completion in the App Bar. It will either:\n
            &#8226; succeed and find a complete rewrite system,\n
            &#8226; fail because it can not orient a specific equation,\n
            &#8226; stop because it reached the maximum number of rounds.\nEither way the rewrite system
            that was reached during automatic completion will be displayed (whether it is complete or not).\nThe maximum number of rounds is initially set to 100
            and can be modified in the settings.</item>
    </string-array>
</resources>