<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
            android:key="pref_completeness"
            android:title="Automatically check for completeness"
            android:summary="After every action automatically check whether the TRS is complete"
            android:defaultValue="true"/>

    <SwitchPreferenceCompat
            android:key="pref_caching"
            android:title="Cache overlaps"
            android:summary="When caching is active, overlaps that have already been considered won't be considered again"
            android:defaultValue="true"/>

    <ck.kbcv.dialogs.NumberPickerPreference
            android:key="number_rounds"
            android:title="Rounds"
            android:summary="Number of rounds in automatic completion"
            android:defaultValue="100"
            />

    <EditTextPreference
        android:key="variable_symbols"
        android:title="@string/variable_symbols"
        android:summary="@string/variable_summary"
        android:defaultValue="x, y, z, a, b"/>

    <EditTextPreference
            android:key="function_symbols"
            android:title="@string/function_symbols"
            android:summary="@string/function_summary"
            android:defaultValue="f, g, h, c"/>

</PreferenceScreen>
